--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -15,7 +15,7 @@
 						href="<?=$this->url('application',['controller' => 'tipo-de-orgao'])?>">Tipos
 							de Órgão</a></li>
 					<li><a
-						href="<?=$this->url('application',['controller' => 'software'])?>">Software de IA</a></li>
+						href="<?=$this->url('application',['controller' => 'software'])?>">Software</a></li>
 					<li><a
 						href="<?=$this->url('application',['controller' => 'categoria-de-software'])?>">Categorias
 							de Software</a></li>
@@ -29,17 +29,17 @@
 			<td>
 				<ul>
 					<li><a
-						href="<?=$this->url('application',['controller' => 'software-de-orgao'])?>">Softwares de IA
+						href="<?=$this->url('application',['controller' => 'software-de-orgao'])?>">Softwares
 							de um órgão</a></li>
 					<li><a
 						href="<?=$this->url('application',['controller' => 'protocolo-de-orgao'])?>">Protocolos
 							de um órgão</a></li>
 					<li><a
 						href="<?=$this->url('application',['controller' => 'maior-orgao-usuario'])?>">Maiores Órgãos
-							Usuários de IA</a></li>
+							Usuários de Software para IA</a></li>
 					<li><a
 						href="<?=$this->url('application',['controller' => 'maior-tipo-orgao-usuario'])?>">Maiores
-							Tipos de Órgãos Usuários de IA</a></li>
+							Tipos de Órgãos Usuários de Software para IA</a></li>
 					<li><a
 						href="<?=$this->url('application',['controller' => 'indicador'])?>">Indicadores
 							Gerais</a></li>
@@ -48,7 +48,7 @@
 			<td>
 				<ul>
 					<li><a
-						href="<?=$this->url('application',['controller' => 'software-mais-usado'])?>">Softwares de IA Mais Usados </a></li>
+						href="<?=$this->url('application',['controller' => 'software-mais-usado'])?>">Softwares Mais Usados </a></li>
 					<li><a
 						href="<?=$this->url('application',['controller' => 'licenca-mais-usada'])?>">Licenças Mais Usadas </a></li>
 					<li><a
