--- a/module/Application/view/application/maior-tipo-de-orgao-usuario/index.phtml
+++ b/module/Application/view/application/maior-tipo-de-orgao-usuario/index.phtml
@@ -4,7 +4,7 @@
  */
 $this->placeholder('url')->delete = $this->urlDelete;
 ?>
-<h1>Maiores Tipos de Órgãos Usuários de Software Livre</h1>
+<h1>Maiores Tipos de Órgãos Usuários de Software para IA</h1>
 <table>
 <thead>
 <tr>
