--- a/module/Application/view/application/software-de-orgao/index.phtml
+++ b/module/Application/view/application/software-de-orgao/index.phtml
@@ -4,7 +4,7 @@
  */
 $this->placeholder('url')->delete = $this->urlDelete;
 ?>
-<h1>Softwares de IA de órgãos</h1>
+<h1>Softwares para IA de órgãos</h1>
 <table class="table">
 <tr>
 <td>
