--- a/module/Application/view/application/software-mais-usado/index.phtml
+++ b/module/Application/view/application/software-mais-usado/index.phtml
@@ -4,7 +4,7 @@
  */
 $this->placeholder('url')->delete = $this->urlDelete;
 ?>
-<h1>Softwares livres mais usados</h1>
+<h1>Softwares mais usados</h1>
 <table>
 <thead>
 <tr>
