--- a/module/Application/view/application/software/index.phtml
+++ b/module/Application/view/application/software/index.phtml
@@ -5,7 +5,7 @@
 $this->placeholder('url')->edit = $this->urlEdit;
 $this->placeholder('url')->delete = $this->urlDelete;
 ?>
-<h1>Softwares de IA</h1>
+<h1>Softwares</h1>
 <table class="table">
 <tr>
 <td>
